--- a/css/stilo.css
+++ b/css/stilo.css
@@ -9,6 +9,7 @@ header{
 }
 
 .logo{
+  text-align: dancing script;
 	text-shadow: 1px 1px #02010a;
 }
 
@@ -33,7 +34,12 @@ header{
   color: black;
 }
 
-.header a.active {
+.header a.visited {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header a.active2 {
   background-color: dodgerblue;
   color: white;
 }
@@ -42,7 +48,7 @@ header{
   float: right;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 900px) {
   .header a {
     float: none;
     display: block;
@@ -60,7 +66,7 @@ nav{
 
 .centrar{
 	text-align: center;
-	background-color: #82c3a6;
+  background-color: #82c3a6;
 	margin-left:-10px; 
 	margin-right: -12px;
 
@@ -169,6 +175,13 @@ div.column{
 	margin-left: -10px;
 	margin-right: -18px;
 }
+
+@media screen and (min-width: 321px) and (max-width: 768px){
+  .contenido{
+    text-align: center;
+  }  
+}
+
 
 .paisajeht{
 	margin-top: -20px;
