--- a/css/stilo.css
+++ b/css/stilo.css
@@ -252,3 +252,40 @@ div.column{
   padding: 10px; 
   margin: 7px;
 }
+
+.preloader {
+  width: 70px;
+  height: 70px;
+  border: 10px solid #eee;
+  border-top: 10px solid #666;
+  border-radius: 50%;
+  animation-name: girar;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.centrado{
+  height: 100vh;
+  background-color: #000;
+  margin-bottom: 10px;
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-top: -10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hidden{
+  overflow: hidden;
+}
